[workspace]
members = [
    "node",
    # "pallets/template",
    "pallets/sortition-sum-game",
    "traits/sortition-sum-game-link",
    "traits/schelling-game-shared-link",
    "pallets/election",
    "pallets/schelling-game-shared",
    "pallets/profile-validation",
    "pallets/tags",
    "pallets/spaces",
    "pallets/posts",
    "pallets/reaction",
    "pallets/support",
    "pallets/ubi",
    "pallets/positive-externality-validation",
    "pallets/shared-storage",
    "runtime",
]
[profile.release]
panic = "unwind"
