[workspace]
members = [
    "node",
    "pallets/template",
    "pallets/sortition-sum-game",
    "pallets/schelling-game-shared",
    "pallets/shared-storage",
    "pallets/spaces",
    "pallets/profile-validation",
    "pallets/positive-externality-validation",
    "pallets/support",
    "pallets/election",
    "pallets/department-funding",
    "pallets/project-tips",
    "pallets/posts",
    "pallets/ubi",
    "pallets/tags",
    "traits/sortition-sum-game-link",
    "traits/schelling-game-shared-link",
    "runtime/node-runtime",
]
[profile.release]
panic = "unwind"
